[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prefabs/MainMenu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 98.0
margin_top = 401.0
margin_right = 278.0
margin_bottom = 525.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 180.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 180.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
